# PMCSNProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
computational-model/: CMakeLists.txt
computational-model/src/: main.c
computational-model/src/deserializer/: deserializer.c  deserializer.h
computational-model/src/lambda-evaluator/: lambda_evaluator.c  lambda_evaluator.h  main.c
computational-model/src/models/: client.h  model.h  park.h  ride.h  show.h  utils.c  utils.h
computational-model/src/park_simulation/: run_simulation.c  run_simulation.h  sim_state.c  sim_state.h
computational-model/src/park_simulation/behaviors/: behaviors.h  client_behaviors.c  ride_behaviors.c  show_behaviors.c
computational-model/src/park_simulation/samples/: samples.c  samples.h
computational-model/tests/: CMakeLists.txt  test.json  test_deserializer.c  test_patience_draws.c  test_simulation.c  validation_test.json  validation_test_simulation.c
docs/: Docs.md  json-input-template.json  reevaluated_lambdas.ods  ride_two_server_two_queues_theoretical_analysis.ods  whole_park.json
docs/production_runs/: base_run.json  park_select_ride.json
docs/validation_results/: estimation_results_first.ods  jackson_system_solver.py  lambda_evaluation_confidence_intervals.csv  lambda_exponential_complex_env_check.ods  multi_server_single_queue_results_evaluator.go  multi_server_single_queue_results_evaluator.py  rides_lambda_distrib_first_analysis.ods  validation_table.ods
lambda-evaluator/: CMakeLists.txt
lambda-evaluator/src/: main.c
libs/RandomVariates/: CMakeLists.txt
production_runs/: CMakeLists.txt
production_runs/src/: main.c
production_runs/tests/: CMakeLists.txt
scripts/: run_lambdas.sh
